# Fiam

./: .gitignore  .qa_body.json  .tmp_cot_section.md  CLAUDE.md  README.md  README_CN.md  STUDIO_CONVENTIONS.md  STUDIO_DESIGN.md  STUDIO_ROADMAP.md  architecture_report_layer1.md  architecture_report_layer2.md  check_isp.sh  fiam.toml.example  fix_toml.sh  pyproject.toml  run_scan.py  setup.ps1  setup.sh  setup_isp.sh  setup_isp_light.sh  test_bench.py  test_crow.py  test_gpu.py
channels/atrium/src-tauri/: Cargo.toml  tauri.conf.json
channels/atrium/src-tauri/src/: main.rs
dashboard/: README.md  package-lock.json  package.json  svelte.config.js  vite.config.ts
deploy/: Caddyfile.example  README.md  fiam-bridge-email.service  fiam-bridge-tg.service  fiam-daemon.service  fiam-dashboard.service  mosquitto-fiam.conf
developer/: README.md  beta.md  debug.md  test_plan_isp.md
docs/: Conductor 与信息流.md  Favilla 与感知层.md  Pool 存储设计.md  ai_runtime_alignment_notes.md  app_plan.md  codex_handoff_T2_catalog.md  markers_protocol.md  plugin_protocol.md  runtime_interaction_trace_2026-05-07.md  self_design.md  ui_plan.md  ui_toolkit.md  voice_plan.md  xhs_1.md  xhs_2.md  xhs_3.md  xhs_4.md  xiao_plan.md  事件切分的演变.md  向量质量与套娃问题.md  奥卡姆剃刀.md  控制台.md  构建 fiam 的旅程.md  记忆图谱与检索.md  通信系统.md  部署与运维.md
scripts/: _test_chat.js  adb_test_favilla.ps1  backfill_edges.py  bench_segment.py  cdp_eval.ps1  cdp_listen.ps1  check_quality.py  dashboard_server.py  dedup_events.py  deploy_favilla.ps1  diag_fiet.sh  diag_iris.ps1  diag_local.ps1  diag_vscode.ps1  extract_events.py  favilla_preview.py  fiam-tunnel.ps1  fiam.py  fiam_old.py  harden_server.sh  migrate_flow_schema.py  migrate_links.py  migrate_to_pool.py  object_put.py  pack_browser_extension.ps1  probe_or_tools.py  process_graph.py  reprocess_pool.py  reset_favilla_whiteboard.py  reset_state.py  sync-store.ps1  (+14 more)
(+681 files in other folders)
