[project]
name = "fiam"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "transformers>=4.40.0",
    "sentence-transformers>=3.0.0",
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "python-frontmatter>=1.1.0",
    "pyyaml>=6.0",
    "anthropic>=0.25.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "sentencepiece>=0.2.1",
    "protobuf>=7.34.1",
    "rich>=13.0.0",
]

[project.scripts]
fiam = "scripts.fiam:main"
