[package]
name = "atrium"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
rumqttc = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
toml = "0.8"
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_Networking_WinInet", "Win32_System_Diagnostics_ToolHelp", "Win32_UI_WindowsAndMessaging"] }
winreg = "0.55"
